# GNN_solves_algorithms_on_graphs

./: GNN.sublime-project  GNN.sublime-workspace  GNN_and_algorithmically_solvable_tasks.md  GNN_and_graph_planarity.md  GNN_benchmarks_on_graph_planarity_detection.md  GNN_tutorials.md  LICENSE  README.md  gentle_intro_to_GNNs.md  pyproject.toml
src/: Check_dataset.ipynb  Explain_GNN.ipynb  Is_Planar.ipynb  Is_Planar_15_nodes.ipynb  PyG_dataset_transforms.ipynb  utils.py
src/dataset/: __init__.py  planar.py  split.py  sum_node_features.py
src/model/: __init__.py  conv_gnn.py  gcn.py  sage.py
src/training/: train_eval.py  train_eval_graphless.py
src/visualization/: metric_fmt.py  visualization.py
